--- a/css/custom.css
+++ b/css/custom.css
@@ -11,3 +11,33 @@ body{
     background-color: transparent;
     transition: background ease-out 0.2s;
 }
+#header .nav-collapse {
+    width: auto;
+}
+/* #header.active{
+
+} */
+#header .nav-link{
+    text-transform: uppercase;
+    font-weight: 500;
+    padding-left: 0;
+    padding-right: 0;
+    color: #000;
+    border-bottom: solid 4px transparent;
+}
+#header .nav-link:hover{
+    border-bottom: var(--primary);
+    color: var(--secondary);
+}
+#slider{
+    background: url(../assets/slider.svg) no-repeat center bottom;
+    background-size: contain;
+}
+#slider h1{
+    text-transform: uppercase;
+    font-weight: 900;
+}
+#slider h4{
+    font-size: 18px;
+    text-transform: uppercase;
+}
